[package]
name = "My_SVN"
version = "0.1.0"
edition = "2024"

[dependencies]
serde  = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
walkdir = "2.1"
sha1 = "0.10.6"
hex = "0.4.3"
path-clean = "1.0.1"
colored = "3.0.0"
pathdiff = "0.2"
chrono = "0.4"
thiserror = "2.0.17"
dunce = "1.0"
rayon = "1.11"